--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="fontawesome-web/css/all.css" rel="stylesheet" />
-                      <link rel="stylesheet" href="style.css">
+    <!-- Unlinked your css and linked my own css here. -->
+                      <link rel="stylesheet" href="mycss.css">
   </head>
 
   <body>
@@ -34,6 +35,18 @@
                   <li href="#"> <a>Friends</a></li>
                   <li href="#"> <a>Friends</a></li>
                 </ul>
+              </li>
+
+              <!-- Made a sample code to just show how to add the hover effect on the list items. No animation was added here. -->
+              <li>
+                  <a href="#" id="hoverable">Click Me
+                    <ul id="drop_down">
+                      <li>Name</li>
+                      <li>Address</li>
+                      <li>House</li>
+                    </ul>
+  
+                  </a>
               </li>
           </ul>
       </div>
