Fixed input type btn  to normal button

--- a/template.html
+++ b/template.html
@@ -87,7 +87,7 @@
                 <h4 id="the4h">AMET NUNC ET ACCUMSAN BLANDIT</h4>
                 <h1 style="font-family: Georgia, Times New Roman, Times, serif;"> Metus Purus Pharetra Sit</h1>
                 <p>Tempor praesent eu orci sodales sagittis neque eget consectetur</p>
-                <input class="my-btn" value="Fringilla est pharetra" class="btn btn-outline-primary" type="button" />
+                <button class="my-btn btn btn-outline-primary" type="button">Fringilla est pharetra</button>
             </div>
         </div>
     </div>
@@ -186,7 +186,7 @@
                         <a href="#">Tag 2</a>
                 </p>
             </span>
-            <input class="my-btnn2" value="READ MORE" class="btn btn-outline-primary" type="button" />
+            <button class="my-btnn2 btn btn-outline-primary" type="button">READ MORE</button>
         </div>
 
         <div class="container2">
@@ -199,7 +199,7 @@
                 <p id="p-icon"><i class="fas fa-user"></i> <a href="#">Admin</a> | <i class="fas fa-tag"> </i> <a
                         href="#"> Tag 1,</a> <a href="#">Tag 2</a></p>
             </span>
-            <input class="my-btnn2" value="READ MORE" class="btn btn-outline-primary" type="button" />
+            <button class="my-btnn2 btn btn-outline-primary" type="button">READ MORE</button>
 
         </div>
 
@@ -214,8 +214,7 @@
                 <p id="p-icon"><i class="fas fa-user"></i> <a href="#">Admin</a> | <i class="fas fa-tag"> </i> <a
                         href="#"> Tag 1,</a> <a href="#">Tag 2</a></p>
             </span>
-
-            <input class="my-btnn2" value="READ MORE" class="btn btn-outline-primary" type="button" />
+            <button class="my-btnn2 btn btn-outline-primary" type="button">READ MORE</button>
         </div>
 
     </div>
